# wolf3d

./: CMakeLists.txt  Makefile  NSWE_Textures.txt  main.c  wolf3d
SDL2/lib/cmake/SDL2/: sdl2-config.cmake
SDL2lib/lib/pkgconfig/: sdl2.pc
Test4/: CMakeLists.txt  Makefile  wolf3d
Test4/SDL2/lib/: libSDL2-2.0.0.dylib
Test4/includes/: wolf3d.h
Test4/libft/: Makefile  ft_lstadd.c  ft_lstdel.c  ft_strsub.c  get_next_line.h  libft.h  libft.lib
Test4/srcs/: bresenham.c  color.c  init.c  keyhook.c  main.c  map_init.c  reader.c  sdl_init.c  sdl_loop.c
includes/: wolf3d.h
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_delarr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_listlast.c  ft_lstadd.c  ft_lstcount.c  ft_lstdel.c  ft_lstdelcont.c  ft_lstdelone.c  ft_lstfind.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_memswap.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  (+30 more)
maps/: intro.m3d  wall.m3d
src/: drawer.c  fix_map.c  fps.c  init.c  keyhook.c  keyhook_utils.c  main.c  raycast.c  read_map.c  run_map.c  validate.c
srcs/: main.c  sdl_init.c
